@@ -17,9 +17,15 @@ TMDA_VERSION = "0.43"
 TMDA_HOMEPAGE = "<http://tmda.sf.net/>"
 
 PYTHON_VERSION = string.split(sys.version)[0]
-# e.g, "TMDA v0.35/Python 2.1.1 (irix646)"
-DELIVERY_AGENT = 'TMDA ' + 'v' + TMDA_VERSION + '/Python ' + PYTHON_VERSION \
-                 + ' (' + sys.platform + ')'
+try:
+    import distutils.util
+    PLATFORM = distutils.util.get_platform()
+except ImportError:
+    PLATFORM = sys.platform
+# e.g, "TMDA/0.43 (Python 2.1.1; freebsd-4.4-RELEASE-i386)"
+DELIVERY_AGENT ='TMDA/%s (Python %s; %s)' % (TMDA_VERSION,
+                                             PYTHON_VERSION,
+                                             PLATFORM)
 
 # The current process id of the Python interpreter as a string.
 PID = str(os.getpid())
